[tool.poetry]
name = "hw11"
version = "0.1.0"
description = ""
authors = ["Denis Bilokon <greenjuiced@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.12"
alembic = "^1.10.4"
psycopg2 = "^2.9.6"
uvicorn = {extras = ["standart"], version = "^0.22.0"}
pydantic = {extras = ["email"], version = "^1.10.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
